# ResearchVault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  run_portal.py  start_portal.sh
.github/workflows/: security_guards.yml
portal/backend/app/: auth.py  db_resolver.py  main.py  portal_secrets.py  portal_state.py  vault_exec.py
portal/backend/app/routers/: graph.py  missions.py  stream.py  system.py  vault.py
portal/frontend/: package-lock.json  package.json
portal/frontend/src/: App.tsx  config.ts  index.css
portal/frontend/src/components/: DecryptedText.tsx  DiagnosticsPanel.tsx  GraphView.tsx  InspectorPanel.tsx  KnowledgeGraph.tsx  TelemetryConsole.tsx
portal/frontend/src/hooks/: useEventStream.ts
portal/frontend/src/lib/: api.ts  usePortalStream.ts
researchvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: core.py  db.py  scuttle.py  strategy.py  vault.py  watchdog.py
tests/: conftest.py  exploit_ssrf.py  test_core.py  test_db.py  test_grokipedia.py  test_mcp_server.py  test_portal_auth.py  test_portal_db_resolver.py  test_portal_logic.py  test_portal_secret_controls.py  test_scuttle.py  test_smoke_cli.py  test_strategy.py  test_youtube.py
