[project]
name = "research-vault"
version = "1.1.3"
description = "Local-first orchestration engine for high-velocity AI research"
authors = [
    { name = "lraivisto", email = "lraivisto@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
